--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.17",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "@vitejs/plugin-react": "^5.0.3",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1"
     }
 }
